[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]

name='dsfns' 
version='2.5'
authors=[
    {name = 'MAFIA'},
]
description='Data Preprocessing fns'
readme = "README.md"
requires-python='>=3.6'

classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]



